--- a/laboratorio9/Dockerfile
+++ b/laboratorio9/Dockerfile
@@ -1,4 +1,9 @@
 FROM debian:latest
-RUN
-RUN
+
+RUN apt-get update && \
+    apt-get install -y apache2 && \
+    apt-get clean
+
+EXPOSE 80
+CMD ["apache2ctl", "-D", "FOREGROUND"]
 
