movi el csv, modificaciòn del cgi, se agrego cgi carp haciendo que cualquier error que pueda pasar se muestre y ubicaciones de archivos

--- a/laboratorio9/Dockerfile
+++ b/laboratorio9/Dockerfile
@@ -1,7 +1,7 @@
 FROM debian:latest
-
 RUN apt-get update && \
-    apt-get install -y apache2 && \
+    apt-get install -y apache2 libapache2-mod-perl2 perl cpanminus && \
+    cpanm CGI && \
     apt-get clean
 
 EXPOSE 80
